Issue #3179589 by dench0: Wrong positioning for the webform dialogs

--- a/styles/components/_regions.scss
+++ b/styles/components/_regions.scss
@@ -30,7 +30,8 @@
     z-index: 101;
     top: 0;
     width: 100%;
-    padding: 16px 0 24px;
+    height: 88px;
+    padding: 16px 0;
     margin-top: -1px;
 
     .gin--classic-toolbar:not(.gin--edit-form) {
