--- a/styles/components/_toolbar.scss
+++ b/styles/components/_toolbar.scss
@@ -6,6 +6,7 @@
       .user-menu {
         order: 99;
         flex-grow: 1;
+        flex-shrink: 0;
         text-align: right;
 
         .toolbar-menu {
